<?xml version="1.0"?>
<package format="3">
  <name>bonxai_core</name>
  <version>0.2.0</version>
  <description>
    Bonxai is a library that implements a compact hierarchical data structure that can store and manipulate volumetric data, discretized on a three-dimensional grid (AKA, a "Voxel Grid").
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
  <license>MPL-2</license>
  <url type="repository">https://github.com/facontidavide/Bonxai</url>
  <author email="davide.faconti@gmail.com">Davide Faconti</author>

  <depend>eigen</depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
