<?xml version="1.0"?>
<package format="3">
  <name>bonxai_map</name>
  <version>0.2.0</version>
  <description>
    Mapping tools to be used with the <a href="https://github.com/facontidavide/Bonxai">Bonxai library</a>, implementing a 3D occupancy grid mapping.
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
  <license>MPL-2</license>
  <url type="repository">https://github.com/facontidavide/Bonxai</url>
  <author email="davide.faconti@gmail.com">Davide Faconti</author>

  <depend>eigen</depend>
  <depend>bonxai_core</depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
